# redot

./: README.md
crates/core-primitives/: Cargo.toml
crates/core-primitives/src/: crypto.rs
crates/rc-validator/: Cargo.toml
crates/rc-validator-fetch/src/: info.rs  lib.rs
crates/rc-validator-network/: Cargo.toml
crates/rc-validator-network/src/: discovery.rs  service.rs  worker.rs
crates/rc-validator/src/: lib.rs  service.rs  worker.rs
node/: Cargo.toml
pallets/task/: Cargo.toml  README.md
pallets/task/src/: lib.rs
pallets/validator-registry/: README.md
pallets/validator-registry/src/: lib.rs
redlight/: Cargo.toml  README.md
redlight/src/: das_rpc.rs  looper.rs
redoxt/: Cargo.toml
redoxt/src/: lib.rs
