[package]
name = "rc-validator"
description = ""
version = "0.1.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"
repository = "https://github.com/ZeroDAO/redot"
keywords = ["substrate", "pallet", "macro", "configuration"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"
anyhow = "1.0.66"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"]}
scale-info = { version = "2.2.0", features = ["derive"] }
futures = "0.3.21"
serde = { version = "1.0.163" }
serde_json = "1.0.68"

frost-ed25519 = { version="1.0.0-rc.0"}

redot-core-primitives = { path = "../core-primitives"}
rc-validator-network = { path = "../rc-validator-network"}

# Melodot
melo-das-db = { git = "https://github.com/ZeroDAO/melodot", branch = "polkadot-v1.0.0" }

# Substrate
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v1.0.0" }

[dev-dependencies]
serde = { version = "1.0.163" }

[features]